Change title of website, change name section font size to avoid tall characters clipping outside the box, fix the overflow check bug with Chrome by increasing the summary title wrapper height by just one pixel.

--- a/src/styles/NameSection.css
+++ b/src/styles/NameSection.css
@@ -11,6 +11,6 @@
 
 .name, .name-input {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 700;
 }
