--- a/src/styles/SummaryBarTitle.css
+++ b/src/styles/SummaryBarTitle.css
@@ -1,8 +1,10 @@
-/* It's imperative to make the box a flexbox and center the text, otherwise the content is displaced in edition mode. */
+/* It's imperative to make the box a flexbox and center the text, otherwise the content is displaced in edition mode.
+Besides, the height is set as 25% + 1px because apparently Chrome has a 1px difference with other browsers with just
+25%, which caused issues with the overflow check. */
 .summary-bar-title-wrapper {
   border: 3px solid transparent;
   width: 100%;
-  height: 25%;
+  height: calc(25% + 1px);
   position: relative;
   display: flex;
   align-items: center;
